--- a/structure/sass/theme/includes/_hamburger.scss
+++ b/structure/sass/theme/includes/_hamburger.scss
@@ -13,6 +13,8 @@
     margin: 0;
     cursor: pointer;
     height: $nav-height;
+    text-align: left;
+    padding-inline-end: $spacer;
  
     display: flex;
     align-items: center;
